Fixing wrap issue

--- a/css/styles.sass
+++ b/css/styles.sass
@@ -552,7 +552,7 @@ nav.tucked
 
 		.features
 			display: flex
-			flex-flow: row nowrap
+			flex-flow: row wrap
 
 			.feature
 				display: flex
